facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_basic.snap
---
source: facet-args/src/schema/tests.rs
expression: "facet_json :: to_string_pretty(& value).unwrap()"
---
{
  "args": {
    "args": {
      "verbose": {
        "name": "verbose",
        "docs": {
          "summary": "Verbose output"
        },
        "kind": {
          "Named": {
            "short": "v"
          }
        },
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "Bool"
            }
          }
        }
      },
      "input": {
        "name": "input",
        "docs": {
          "summary": "Input file"
        },
        "kind": "Positional",
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "String"
            }
          }
        },
        "required": true
      },
      "include": {
        "name": "include",
        "docs": {
          "summary": "Include list"
        },
        "kind": {
          "Named": {}
        },
        "value": {
          "Vec": {
            "element": {
              "Leaf": {
                "kind": {
                  "Scalar": "String"
                }
              }
            }
          }
        },
        "required": true,
        "multiple": true
      },
      "quiet": {
        "name": "quiet",
        "docs": {
          "summary": "Quiet count"
        },
        "kind": {
          "Named": {
            "short": "q",
            "counted": true
          }
        },
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "Integer"
            }
          }
        },
        "multiple": true
      }
    },
    "subcommands": {
      "build": {
        "name": "build",
        "docs": {
          "summary": "Build stuff"
        },
        "args": {
          "args": {
            "release": {
              "name": "release",
              "docs": {
                "summary": "Release build"
              },
              "kind": {
                "Named": {
                  "short": "r"
                }
              },
              "value": {
                "Leaf": {
                  "kind": {
                    "Scalar": "Bool"
                  }
                }
              }
            }
          },
          "subcommands": {}
        }
      },
      "clean-all": {
        "name": "clean-all",
        "docs": {
          "summary": "Clean"
        },
        "args": {
          "args": {},
          "subcommands": {}
        }
      }
    },
    "subcommand_field_name": "command"
  },
  "config": {
    "field_name": "config",
    "fields": {
      "host": {
        "docs": {},
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "String"
            }
          }
        }
      },
      "port": {
        "docs": {},
        "value": {
          "Leaf": {
            "kind": {
              "Scalar": "Integer"
            }
          }
        }
      }
    }
  }
}
