facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_conflicting_short_flags.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: duplicate flag `-v`
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct ConflictingShortFlags {
   │        ──────────┬──────────  
   │                  ╰──────────── defined at facet-args/src/schema/tests.rs:121
   │ 
 4 │     a: bool,
   │     ───┬───  
   │        ╰───── `-v` first defined here
   │ 
 6 │     b: bool,
   │     ───┬───  
   │        ╰───── defined again here
 7 │ }
   │ ┬  
   │ ╰── end of definition
───╯
