facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_env_prefix_without_config.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: field `value` uses args::env_prefix without args::config
   ╭─[ <unknown>:4:5 ]
   │
 2 │ struct EnvPrefixWithoutConfig {
   │        ───────────┬──────────  
   │                   ╰──────────── defined at facet-args/src/schema/tests.rs:108
   │ 
 4 │     value: String,
   │     ──────┬──────  
   │           ╰──────── field `value` uses args::env_prefix without args::config
 5 │ }
   │ ┬  
   │ ╰── end of definition
───╯
