facet-args/src/schema/snapshots/facet_args__schema__tests__snapshot_schema_missing_args_annotation.snap
---
source: facet-args/src/schema/tests.rs
expression: stripped
---
Error: field `foo` is missing a #[facet(args::...)] annotation
   ╭─[ <unknown>:3:5 ]
   │
 2 │ struct MissingArgsAnnotation {
   │        ──────────┬──────────  
   │                  ╰──────────── defined at facet-args/src/schema/tests.rs:65
 3 │     foo: String,
   │     ─────┬─────  
   │          ╰─────── field `foo` is missing a #[facet(args::...)] annotation
 4 │ }
   │ ┬  
   │ ╰── end of definition
───╯
